<resources>
    <string name="app_name">Iboralar Lug\'ati</string>
    <string name="asosiy">Asosiy</string>
    <string name="tanlangan">Tanlangan</string>
    <string name="kategoriya">Kategoriya</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_next">Next</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_email">Email last text must be @gmail.com</string>
    <string name="registration">Registration</string>
    <string name="hint_username">Username</string>
    <string name="error_username">Username must not be blank</string>
    <string name="go_registration">I haven\'t an account, go registration</string>
</resources>